--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
 								</div>
 								<div class="container">
 									<header class="major">
-										<h2>Read Only</h2>
-										<p>Just an incredibly simple responsive site<br />
-										template freebie by <a href="http://html5up.net">HTML5 UP</a>.</p>
+										<h2>PhD student in WIS</h2>
+										<p>Chemistry Cinema Programming<br />
+										<a href="http://html5up.net">HTML5 UP</a>.</p>
 									</header>
-									<p>Faucibus sed lobortis aliquam lorem blandit. Lorem eu nunc metus col. Commodo id in arcu ante lorem ipsum sed accumsan erat praesent faucibus commodo ac mi lacus. Adipiscing mi ac commodo. Vis aliquet tortor ultricies non ante erat nunc integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum.</p>
+									<p>Hi! My name is Dmitrii or Dima (if you wanna save your tongue) I'm first year PhD student in Weizmann Institute of Science. I am studying organic and electrical chemistry in the laboratory of Samer Gnaim. In my free time I read articles, play computer games and program something useless</p>
 								</div>
 							</section>
 
