--- a/index.html
+++ b/index.html
@@ -17,22 +17,21 @@
 			<section id="header">
 				<header>
 					<span class="image avatar"><img src="images/avatar.jpg" alt="" /></span>
-					<h1 id="logo"><a href="#">Willis Corto</a></h1>
-					<p>I got reprogrammed by a rogue AI<br />
-					and now I'm totally cray</p>
+					<h1 id="logo"><a href="#">Dmitrii Bushmin</a></h1>
+					<p>chemist, PhD student<br />
+					selfmade shitcoder</p>
 				</header>
 				<nav id="nav">
 					<ul>
 						<li><a href="#one" class="active">About</a></li>
 						<li><a href="#two">Things I Can Do</a></li>
-						<li><a href="#three">A Few Accomplishments</a></li>
-						<li><a href="#four">Contact</a></li>
+						<li><a href="#three">List of publications</a></li>
+						<li><a href="#four">Recomend me a film</a></li>
 					</ul>
 				</nav>
 				<footer>
 					<ul class="icons">
 						<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 						<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 						<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
 						<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
@@ -54,8 +53,7 @@
 								<div class="container">
 									<header class="major">
 										<h2>PhD student in WIS</h2>
-										<p>Chemistry Cinema Programming<br />
-										<a href="http://html5up.net">HTML5 UP</a>.</p>
+										<p>Chemistry, Cinematography, Programming<br />
 									</header>
 									<p>Hi! My name is Dmitrii or Dima (if you wanna save your tongue) I'm first year PhD student in Weizmann Institute of Science. I am studying organic and electrical chemistry in the laboratory of Samer Gnaim. In my free time I read articles, play computer games and program something useless</p>
 								</div>
@@ -65,7 +63,7 @@
 							<section id="two">
 								<div class="container">
 									<h3>Things I Can Do</h3>
-									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer lorem ipsum dolor sit amet.</p>
+									<p>Keep scrolling, this is just a random template downloaded from the internet</p>
 									<ul class="feature-icons">
 										<li class="icon solid fa-code">Write all the code</li>
 										<li class="icon solid fa-cubes">Stack small boxes</li>
@@ -81,27 +79,27 @@
 							<section id="three">
 								<div class="container">
 									<h3>A Few Accomplishments</h3>
-									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p>
+									<p>If you are interested in homogeneous catalysis, here are some publications I have contributed to</p>
 									<div class="features">
 										<article>
-											<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
+											<a href="https://chemistry-europe.onlinelibrary.wiley.com/doi/full/10.1002/cctc.202301346" class="image"><img src="images/nickel.jpg" alt="images/pic01.jpg" /></a>
 											<div class="inner">
-												<h4>Possibly broke spacetime</h4>
-												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
+												<h4>Mastepiece of my previous degree</h4>
+												<p>Diverting Ni-Catalyzed Direct Benzylic C−H Hydroxylation towards Trifluoroethoxylation</p>
 											</div>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
+											<a href="https://onlinelibrary.wiley.com/doi/10.1002/aoc.6908" class="image"><img src="images/review.png" alt="images/pic02.jpg" /></a>
 											<div class="inner">
-												<h4>Terraformed a small moon</h4>
-												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
+												<h4>Review with a lot of data</h4>
+												<p>Ni- and Pd-based homogeneous catalyst systems for direct oxygenation of C(sp3)-H groups</p>
 											</div>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
+											<a href="https://www.sciencedirect.com/science/article/pii/S2468823121000201" class="image"><img src="images/iron.jpg" alt="images/pic03.jpg" /></a>
 											<div class="inner">
-												<h4>Snapped dark matter in the wild</h4>
-												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
+												<h4>Iron is cool</h4>
+												<p>Non-heme perferryl intermediates: Effect of spin state on the epoxidation enantioselectivity</p>
 											</div>
 										</article>
 									</div>
@@ -112,18 +110,7 @@
 							<section id="four">
 								<div class="container">
 									<h3>Contact Me</h3>
-									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p>
-									<form method="post" action="#">
-										<div class="row gtr-uniform">
-											<div class="col-6 col-12-xsmall"><input type="text" name="name" id="name" placeholder="Name" /></div>
-											<div class="col-6 col-12-xsmall"><input type="email" name="email" id="email" placeholder="Email" /></div>
-											<div class="col-12"><input type="text" name="subject" id="subject" placeholder="Subject" /></div>
-											<div class="col-12"><textarea name="message" id="message" placeholder="Message" rows="6"></textarea></div>
-											<div class="col-12">
-												<ul class="actions">
-													<li><input type="submit" class="primary" value="Send Message" /></li>
-													<li><input type="reset" value="Reset Form" /></li>
-												</ul>
+									<p>If you know a cool movie and really want to share it, then write to me at dmitrii.bushmin@weizmann.ac.il</p>
 											</div>
 										</div>
 									</form>
