--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Read Only by HTML5 UP</title>
+		<title>Dmitrii Bushmin</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -16,10 +16,10 @@
 		<!-- Header -->
 			<section id="header">
 				<header>
-					<span class="image avatar"><img src="images/avatar.jpg" alt="" /></span>
+					<span class="image avatar"><img src="images/cubane.png" alt="" /></span>
 					<h1 id="logo"><a href="#">Dmitrii Bushmin</a></h1>
-					<p>chemist, PhD student<br />
-					selfmade shitcoder</p>
+					<p>Chemist, PhD student<br />
+					Selfmade shitcoder</p>
 				</header>
 				<nav id="nav">
 					<ul>
@@ -31,10 +31,9 @@
 				</nav>
 				<footer>
 					<ul class="icons">
-						<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
-						<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+						<li><a href="https://instagram.com/dimonich00" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+						<li><a href="https://github.com/dimonich00" class="icon brands fa-github"><span class="label">Github</span></a></li>
+						<li><a href="mailto:dmitrii.bushmin@weizmann.ac.il" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 				</footer>
 			</section>
@@ -110,7 +109,7 @@
 							<section id="four">
 								<div class="container">
 									<h3>Contact Me</h3>
-									<p>If you know a cool movie and really want to share it, then write to me at dmitrii.bushmin@weizmann.ac.il</p>
+						<p>If you know a cool movie and really want to share it, then write to me at <a href = "mailto:dmitrii.bushmin@weizmann.ac.il"><sup> dmitrii.bushmin@weizmann.ac.il </sup></a></p>
 											</div>
 										</div>
 									</form>
@@ -454,7 +453,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 					<section id="footer">
 						<div class="container">
 							<ul class="copyright">
-								<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+								<li>&copy; Здравствуйте. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 							</ul>
 						</div>
 					</section>
