--- a/index.html
+++ b/index.html
@@ -54,7 +54,9 @@
 										<h2>PhD student in WIS</h2>
 										<p>Chemistry, Cinematography, Programming<br />
 									</header>
-									<p>Hi! My name is Dmitrii or Dima (if you wanna save your tongue) I'm first year PhD student in Weizmann Institute of Science. I am studying organic and electrical chemistry in the laboratory of Samer Gnaim. In my free time I read articles, play computer games and program something useless</p>
+						<p>Hi! My name is Dmitrii or Dima (if you wanna save your tongue) I'm first year PhD student in Weizmann Institute of Science. I am studying organic chemistry in the laboratory of <a href="https://www.weizmann.ac.il/MCMS/gnaim/"> Samer Gnaim.</a> In my free time I read articles, play computer games and program something useless</p>
+
+						<p> I am currently taking a Python course at <a href="https://www.weizmann.ac.il/">WIS</a> under the guidance of <a href="https://szabgab.com/"Gábor Szabó</a> 
 								</div>
 							</section>
 
@@ -109,7 +111,7 @@
 							<section id="four">
 								<div class="container">
 									<h3>Contact Me</h3>
-						<p>If you know a cool movie and really want to share it, then write to me at <a href = "mailto:dmitrii.bushmin@weizmann.ac.il"><sup> dmitrii.bushmin@weizmann.ac.il </sup></a></p>
+						<p>If you know a cool movie and really want to share it, then write to me at <a href="mailto:dmitrii.bushmin@weizmann.ac.il"> dmitrii.bushmin@weizmann.ac.il</a></p>
 											</div>
 										</div>
 									</form>
