--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 									</header>
 						<p>Hi! My name is Dmitrii or Dima (if you wanna save your tongue) I'm first year PhD student in Weizmann Institute of Science. I am studying organic chemistry in the laboratory of <a href="https://www.weizmann.ac.il/MCMS/gnaim/"> Samer Gnaim.</a> In my free time I read articles, play computer games and program something useless</p>
 
-						<p> I am currently taking a Python course at <a href="https://www.weizmann.ac.il/">WIS</a> under the guidance of <a href="https://szabgab.com/"Gábor Szabó</a> 
+						<p> I am currently taking a Python course at <a href="https://www.weizmann.ac.il/">WIS</a> under the guidance of <a href="https://szabgab.com/">Gábor Szabó</a> 
 								</div>
 							</section>
 
